2024-02-03  Bart Schaefer  <schaefer@zsh.org>

	* 52513: Doc/Zsh/mod_private.yo, Src/Modules/param_private.c,
	Src/params.c, Test/v10private.ztst: nofork substitutions can
	use private parameters; fix crash bug on {privateFD}>&N; add
	tests and documentation

2024-01-28  Bart Schaefer  <schaefer@zsh.org>

	* 52510: Doc/Zsh/expn.yo, Doc/Zsh/mod_private.yo: document how
	${ ... } et al. affect use of "private"; add index entries

	* 52509: configure.ac, Src/utils.c: manage internals of stdio
	objects when performing redirections.

2024-01-28  Oliver Kiddle  <opk@zsh.org>

	* 52500: Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/prompt.c:
	add layer token to zle attributes to provide control over
	the precedence of highlighting

	* 52499: Src/prompt.c: support highlight groups defined in a
	.zle.hlgroups associative array and referenced using %H in
	prompt strings or hl= in zle_highlight/region_highlight

	* unposted: Src/Modules/zutil.c: remove unused variable to silence
	compiler warning

	* Jörg Sommer: 52442: Src/zsh.h: Mark hookdef.name as const

	* Jörg Sommer: 52444: Src/module.c: Mark name argument of some
	functions const

	* Jörg Sommer: 52441: Src/Zle/zle_vi.c: Mark variables as const

	* Jörg Sommer: 52440: Src/Zle/textobjects.c: Mark variables as const

2024-01-26  Oliver Kiddle  <opk@zsh.org>

	* 52405, 52502: Src/Modules/pcre.c, Test/V07pcre.ztst:
	add empty elements to $match for optional captures that don't match

	* github #110: opensauce04: Completion/Redhat/Command/_dnf:
	Fix incorrect completion for `dnf --showduplicates`

	* github #108: Aurélien Olivier: Completion/Unix/Command/_perlbrew:
	add perlbrew completion

2024-01-25  Bart Schaefer  <schaefer@zsh.org>

	* 52385: Test/B03print.ztst: avoid "tr" in test output formatting

2024-01-24  Bart Schaefer  <schaefer@zsh.org>

	* 52496 + 52377: Doc/Zsh/options.yo, Doc/Zsh/params.yo: clarify
	SPROMPT behavior when CORRECT_ALL is set

	* 52492: Src/math.c: prevent indexing error when using recursive